| Summary: | ASTERISK-27801: Asterisk got stuck while enabling "ari set debug all on" | ||
| Reporter: | shaurya jain (shaurya) | Labels: | webrtc |
| Date Opened: | 2018-04-13 02:11:49 | Date Closed: | 2018-05-04 06:09:36 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | 15.2.2 15.3.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Ubuntu 16.04,webrtc,ARI | Attachments: | ( 0) arilog.txt ( 1) core-full.txt |
| Description: | When we are anabling ari set debug all on then asterisk got stuck and not responding the ARI request.
Please find the attached ARI logs on 8088 and console logs while stuck. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-04-13 02:11:50.296-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: shaurya jain (shaurya) 2018-04-13 02:14:59.061-0500 We have check with the below application :- http://ari.asterisk.org/#!/applications/subscribe_post_2 By: Kevin Harwell (kharwell) 2018-04-13 14:31:37.675-0500 I had DO_CRASH enabled, so I received a crash ([^core-full.txt]) Enabled ARI debugging on the CLI: {noformat}ari set debug all on{noformat} and then issue an ARI command. It also seems to crash if you start your application after turning on debug. By: shaurya jain (shaurya) 2018-04-18 00:36:14.641-0500 I am not able to find DO_CRASH in menuselect of 15.3.0 By: Kevin Harwell (kharwell) 2018-04-18 09:28:40.767-0500 [~shaurya], the DO_CRASH option only shows up in menuselect when you configure asterisk with developer mode enabled: {noformat} ./configure --enable-dev-mode {noformat} Having that mode enabled can be useful when developing and debugging Asterisk. Note, that by enabling DO_CRASH Asterisk will now crash on Asterisk assert statements. By: Friendly Automation (friendly-automation) 2018-05-04 06:09:36.952-0500 Change 8912 merged by Jenkins2: res_ari: Remove requirement that body exists when debug is on. [https://gerrit.asterisk.org/8912|https://gerrit.asterisk.org/8912] By: Friendly Automation (friendly-automation) 2018-05-04 06:16:25.980-0500 Change 8913 merged by Jenkins2: res_ari: Remove requirement that body exists when debug is on. [https://gerrit.asterisk.org/8913|https://gerrit.asterisk.org/8913] By: Friendly Automation (friendly-automation) 2018-05-04 06:33:32.867-0500 Change 8914 merged by Jenkins2: res_ari: Remove requirement that body exists when debug is on. [https://gerrit.asterisk.org/8914|https://gerrit.asterisk.org/8914] By: shaurya jain (shaurya) 2018-05-09 01:35:53.643-0500 Is it fixed? Please share the release details. By: Asterisk Team (asteriskteam) 2018-05-09 01:35:54.048-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Joshua C. Colp (jcolp) 2018-05-09 03:50:43.421-0500 A code change was done to resolve the problem, each review is linked by the "Friendly Automation" comments. It will be present in the next release or you can grab the change from the review for Asterisk 15 and manually apply it. | ||